--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="re_type_password">Re-type Password</string>
     <string name="register">Register</string>
     <string name="already_register_login">Already register? Login</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="lokasi">lokasi</string>
+    <string name="tanggal_berangkat">Tanggal Berangkat</string>
+    <string name="cari_trip">Cari Trip</string>
+    <string name="mitra_trip">Mitra Trip</string>
+    <string name="profil">Profil</string>
 </resources>
