+detail Trip(belum selesai)

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -5,4 +5,5 @@
     <string name="cari_trip">Cari Trip</string>
     <string name="mitra_trip">Mitra Trip</string>
     <string name="profil">Profil</string>
+    <string name="loremipsum">lorem lorem lorem ipsum sit amet dolor, lorem ipsum sit amet dolor, lorem ipsum sit amet dolor,lorem ipsum sit amet dolor, lorem ipsum sit amet dolor</string>
 </resources>
