--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="loremipsum">lorem lorem lorem ipsum sit amet dolor, lorem ipsum sit amet dolor, lorem ipsum sit amet dolor,lorem ipsum sit amet dolor, lorem ipsum sit amet dolor</string>
     <string name="txt_imagetrip">gambar foto trip</string>
     <string name="white_secondary">E2E2E2</string>
+    <string name="payment_accepted">Payment Accepted</string>
 </resources>
