--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="lorem_ipsum_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce faucibus eleifend erat, ac egestas massa mattis id.</string>
     <string name="onboarding_1">Onboarding 1</string>
     <string name="mountain_name">Mountain Name</string>
+    <string name="welcome_back_daffa">Welcome Back, Daffa!</string>
 </resources>
