--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <string name="onboarding_1">Onboarding 1</string>
     <string name="mountain_name">Mountain Name</string>
     <string name="welcome_back_daffa">Welcome Back, Daffa!</string>
+    <string name="cari">Cari</string>
+    <string name="pencarian">Telusuri</string>
 </resources>
