--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="welcome_back_daffa">Welcome Back, Daffa!</string>
     <string name="cari">Cari</string>
     <string name="pencarian">Telusuri</string>
+    <string name="enter_email">Enter Email</string>
 </resources>
