--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="pencarian">Telusuri</string>
     <string name="enter_email">Enter Email</string>
     <string name="no_item">Tidak ada data</string>
+    <string name="txt_register_desc">A verification email has been sent to your email address. Please check your email and follow the instructions to verify your account.</string>
+    <string name="txt_register_label">Email Verification</string>
 </resources>
