--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="logo_desc">logo desc</string>
     <string name="illustration_desc">illustration desc</string>
     <string name="onboarding_2">Onboarding 2</string>
-    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce faucibus eleifend erat, ac egestas massa mattis id.</string>
+    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>
     <string name="create_account">Create Account</string>
     <string name="your_username">Your username</string>
     <string name="your_email">Your email</string>
@@ -25,7 +25,7 @@
     <string name="cari_trip">Cari Trip</string>
     <string name="mitra_trip">Mitra Trip</string>
     <string name="profil">Profil</string>
-    <string name="loremipsum">lorem lorem lorem ipsum sit amet dolor, lorem ipsum sit amet dolor, lorem ipsum sit amet dolor,lorem ipsum sit amet dolor, lorem ipsum sit amet dolor</string>
+    <string name="loremipsum">lorem lorem lorem ipsum sit amet dolor</string>
     <string name="txt_imagetrip">gambar foto trip</string>
     <string name="white_secondary">E2E2E2</string>
     <string name="payment_accepted">Payment Accepted</string>
@@ -33,7 +33,7 @@
     <string name="not_register_yet_register">Not register yet? Register</string>
     <string name="enter_username">Enter username</string>
     <string name="sign_in">Sign in</string>
-    <string name="lorem_ipsum_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce faucibus eleifend erat, ac egestas massa mattis id.</string>
+    <string name="lorem_ipsum_2">Lorem ipsum dolor sit amet.</string>
     <string name="onboarding_1">Onboarding 1</string>
     <string name="mountain_name">Mountain Name</string>
     <string name="welcome_back_daffa">Welcome Back, Daffa!</string>
